@@ -1,0 +1,9 @@
+Title: omd_status: Fix labelling and structure of several metric graphs
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.2.8p14
+Date: 1477561533
+Class: fix
+
+
