@@ -5,6 +5,7 @@
     * 3831 FIX: ucd_cpu_util: no longer reports an UNKNOWN error when the counter data wasn't updated...
     * 3985 FIX: mrpe: fixed broken long output when using the CMC...
     * 4035 FIX: df_zos: Fixed ignoring last filesystem after new discovery...
+    * 3741 FIX: omd_status: Fix labelling and structure of several metric graphs
 
     Multisite:
     * 3970 SEC: Fixed possible URL injection on index page...
